# Code_Analyzer_crewAI

./: .gitignore  Code_Analyzer.py  README.md  example_runner.py  project-summary.md  pyproject.toml  requirements.txt
analysis/tims-python-client/docs/: documentation.md
knowledge/: knowledge-patterns.json
output/: documentation.md
output/tests/: test_unknown.py
src/code_analyzer/: __init__.py  crew.py  main.py
src/code_analyzer/config/: __init__.py  agents.yaml  config.py  tasks.yaml
src/code_analyzer/tools/: __init__.py  code_analyzer_tool.py  code_reader_tool.py  documentation_tool.py  test_generator_tool.py  test_runner_tool.py
